{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 105,
  "lineage": "ed735033-5742-b5c3-154b-87611bda2a2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:security-group/sg-0363765586a891e48",
            "description": "Allowing HTTP requests to the app tier application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0363765586a891e48",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0002120a881beabdb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-app-security-group",
            "name_prefix": "",
            "owner_id": "190358173462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-app-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3341d590c993b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_http",
            "aws_security_group.web_instance_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:security-group/sg-0e253d75acaff0697",
            "description": "Allowing HTTP requests to the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e253d75acaff0697",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "190358173462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3341d590c993b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:security-group/sg-04446a2dcf3319ccb",
            "description": "Allowing requests to the app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04446a2dcf3319ccb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0363765586a891e48"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-server-security-group",
            "name_prefix": "",
            "owner_id": "190358173462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3341d590c993b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_app_http",
            "aws_security_group.alb_http",
            "aws_security_group.web_instance_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:security-group/sg-0c28673d87393f9f6",
            "description": "RDS postgres server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c28673d87393f9f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04446a2dcf3319ccb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mydb1",
            "name_prefix": "",
            "owner_id": "190358173462",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3341d590c993b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_app_http",
            "aws_security_group.alb_http",
            "aws_security_group.app_instance_sg",
            "aws_security_group.web_instance_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:security-group/sg-0002120a881beabdb",
            "description": "Allowing requests to the web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0002120a881beabdb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e253d75acaff0697"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server-security-group",
            "name_prefix": "",
            "owner_id": "190358173462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3341d590c993b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_http",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:subnet/subnet-0e9e181409ceb8d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.201.0/24",
            "id": "subnet-0e9e181409ceb8d67",
            "map_public_ip_on_launch": false,
            "owner_id": "190358173462",
            "tags": {
              "Name": "avengers-database-subnet-ap-southeast-1a"
            },
            "vpc_id": "vpc-0d3341d590c993b31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:subnet/subnet-0dcba01e8f339e5c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.202.0/24",
            "id": "subnet-0dcba01e8f339e5c1",
            "map_public_ip_on_launch": false,
            "owner_id": "190358173462",
            "tags": {
              "Name": "avengers-database-subnet-ap-southeast-1b"
            },
            "vpc_id": "vpc-0d3341d590c993b31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:190358173462:vpc/vpc-0d3341d590c993b31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d2a81e68477f654",
            "default_route_table_id": "rtb-03aeb3a7cc0ab5bd3",
            "default_security_group_id": "sg-018c1e486ca0817de",
            "dhcp_options_id": "dopt-04e45ae1bf2f11e86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d3341d590c993b31",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03aeb3a7cc0ab5bd3",
            "owner_id": "190358173462",
            "tags": {
              "Name": "avengers VPC"
            }
          }
        }
      ]
    }
  ]
}